--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "shadcn": "shadcn-ui"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.0",
@@ -29,6 +30,7 @@
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.1",
+    "shadcn-ui": "^0.9.1",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
