--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.1",
+    "react-spinners": "^0.14.1",
     "shadcn-ui": "^0.9.1",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
